[tool.poetry]
name = "h-gantry"
version = "0.1.0"
description = "H-Gantry Control"
authors = ["MatthewGerber <gerber.matthew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
raspberry-py = {path = "submodules/raspberry-py", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
